<resources>
    <string name="app_name">Saruj Kanti Das</string>

    <string name="lbl_no_data_found">No data Found</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="country_code">+91</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="save_btn">Submit</string>
    <string name="enter_password">Please enter your password</string>
    <string name="txt_Logout">Logout</string>
    <string name="txt_ok">OK</string>
    <string name="txt_Cancel">Cancel</string>
    <string name="txt_sure_logout">Are you sure you want to logout?</string>
    <string name="txt_success_logout">Logged out successfully</string>
    <string name="txt_error">Error</string>
    <string name="txt_failure">Failure</string>
    <string name="data_not_loaded">Data not loaded yet</string>
    <string name="enter_valid_number">Please enter valid phone number</string>
    <string name="enter_your_password">Please enter your password</string>
    <string name="user_not_found">User not found!! \n Please register first</string>
    <string name="success_login">Login successful!</string>
    <string name="check_internet_connection">Something went wrong !! \n Please check internet connection</string>
    <string name="staff_register">Staff Register</string>
    <string name="enter_name">Enter name</string>
    <string name="hint_phone">Enter phone no.</string>
    <string name="hint_designation">Enter designation</string>
    <string name="register_title">Add new user</string>
    <string name="fill_all_details">Please fill all fields</string>
    <string name="failed_to_add">Failed to add staff</string>
    <string name="txt_image">Images</string>
    <string name="txt_doj">Doj:</string>
    <string name="unable_to_open_phone">Unable to open dialer</string>
    <string name="whatsapp_not_installed">WhatsApp not installed on this device</string>
    <string name="unable_to_open_message">Unable to open Messages app</string>
    <string name="package_whatsapp">com.whatsapp</string>
    <string name="text_tel">tel:</string>
    <string name="text_sms">smsto:</string>
    <string name="whatsapp_device">whatsapp://send?phone=</string>
    <string name="txt_add_more">+Add More</string>
    <string name="total_staff">Total Staff</string>
    <string name="total_tenant">Total Tenant</string>

</resources>